NIAD-374: gp to ha names amendment (#147)
PersonName and PersonPreviousName amendment translators